scripts/traefik-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-system
spec:
  ports:
  - protocol: TCP
    name: web
    port: 80
  - protocol: TCP
    name: admin
    port: 8080
  - protocol: TCP
    name: websecure
    port: 443
  type: LoadBalancer
  selector:
    app: traefik

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-system
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik
        image: traefik:v2.3
        args:
        - --api.insecure
        - --accesslog
        - --entrypoints.web.Address=:80
        - --entrypoints.websecure.Address=:443
        - --providers.kubernetescrd
        # - --certificatesresolvers.myresolver.acme.tlschallenge
        # - --certificatesresolvers.myresolver.acme.email=mail@example.com
        # - --certificatesresolvers.myresolver.acme.storage=acme.json
        ports:
        - name: web
          containerPort: 80
        - name: websecure
          containerPort: 443
        - name: admin
          containerPort: 8080
        resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
